[package]
name = "tauri-plugin-vibrancy"
description = "Make your Tauri/TAO windows vibrant."
authors = [ "Tauri Programme within The Commons Conservancy" ]
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/tauri-plugin-vibrancy"
documentation = "https://docs.rs/tauri-plugin-vibrancy"
keywords = [ "vibrancy", "acrylic", "blur", "tauri", "gui", "plugin", "tauri-plugin" ]
categories = [ "gui" ]

[dependencies]
tao = { git = "https://github.com/tauri-apps/tao", branch = "next", default-features = false, features = [], optional = true }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", default-features = false, features = [], optional = true }

[features]
tao-impl = ["tao"]
tauri-impl = ["tauri"]

[target."cfg(target_os = \"windows\")".dependencies.windows]
  version = "0.29.0"
  features = [
  "alloc",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging"
]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"

[[example]]
name = "tao"
required-features = ["tao-impl"]
