[package]
name = "window-vibrancy"
description = "Make your windows vibrant."
authors = [ "Tauri Programme within The Commons Conservancy" ]
version = "0.3.2"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/tauri-plugin-vibrancy"
documentation = "https://docs.rs/tauri-plugin-vibrancy"
keywords = [ "vibrancy", "acrylic", "mica", "blur", "windowing" ]
categories = [ "gui" ]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [ "x86_64-apple-darwin", "x86_64-pc-windows-msvc" ]

[dependencies]
raw-window-handle = "0.5"

[dev-dependencies]
tao = "0.15"
winit = "0.27"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging"
]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"
