[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
window-vibrancy = { path = "../../../" }


[build-dependencies]
tauri-build = { version = "1.1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
